--- a/assets/styles/pages/home/home-7.scss
+++ b/assets/styles/pages/home/home-7.scss
@@ -19,7 +19,6 @@
   }
 
   @media (max-width: $br4) {
-    text-align: start;
     font-size: 35px;
   }
 }
